--- a/tictactoe/tictactoe/src/app.scss
+++ b/tictactoe/tictactoe/src/app.scss
@@ -8,14 +8,16 @@ main {
   .board {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    grid-gap: 1rem;
     width: 50%;
     margin: 0 auto;
   }
   .listItem {
-    font-size: 50px;
-    height: 36px;
+    font-size: 75px;
+    height: 50px;
+    width: 50px;
     margin: 4px;
-    padding: 1rem;
+    padding: 3rem;
     border: 4px solid lightgray;
     display: flex;
     justify-content: center;
